--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "babel": "babel --presets es2015 ./index.js --out-dir build",
-    "start": "npm run babel && node ./build"
+    "start": "npm run babel && node ./build",
+    "lint": "eslint index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^26.3.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^8.49.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^26.4.2"
   },
   "dependencies": {
